Update Class
